--- a/lessons/1_timer_over_socket/client/src/App.css
+++ b/lessons/1_timer_over_socket/client/src/App.css
@@ -95,6 +95,9 @@ body {
   padding-right: 20px;
   border-bottom: solid 1px #eee;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .DrawingList-item:hover {
